fix css inline error

--- a/EmailTemplates/BlogNotificationTemplate.html
+++ b/EmailTemplates/BlogNotificationTemplate.html
@@ -114,13 +114,13 @@
                     <table role="presentation" style="border-collapse: collapse; border: 0; border-spacing: 0;">
                       <tr>
                         <td style="padding: 15px 0; width: 38px">
-                          <a href="https://medium.com/@jaredcsv" style=""><img src="img/Medium-Symbol-Black-RGB@2x.png" alt="Medium" width="30" style="height: auto; display: block; border: 0" /></a>
+                          <a href="https://medium.com/@jaredcsv"><img src="img/Medium-Symbol-Black-RGB@2x.png" alt="Medium" width="30" style="height: auto; display: block; border: 0" /></a>
                         </td>
                         <td style="padding: 0 0 0 10px; width: 38px">
-                          <a href="https://www.linkedin.com/in/jaredcsv/" style=""><img src="img/linkedin.png" alt="LinkedIn" width="20" style="height: auto; display: block; border: 0" /></a>
+                          <a href="https://www.linkedin.com/in/jaredcsv/"><img src="img/linkedin.png" alt="LinkedIn" width="20" style="height: auto; display: block; border: 0" /></a>
                         </td>
                         <td style="padding: 0 0 0 10px; width: 38px">
-                          <a href="https://github.com/jaredcsv" style=""><img src="img/github-logo.png" alt="Github" width="20" style="height: auto; display: block; border: 0" /></a>
+                          <a href="https://github.com/jaredcsv"><img src="img/github-logo.png" alt="Github" width="20" style="height: auto; display: block; border: 0" /></a>
                         </td>
                       </tr>
                       <tr>
