--- a/EmailTemplates/BlogNotificationTemplate.html
+++ b/EmailTemplates/BlogNotificationTemplate.html
@@ -27,7 +27,7 @@
     }
   </style>
 </head>
-<body style="margin: 0; padding: 0; background-color: #fefbf6; color: #111827">
+<body style="margin: 0; padding: 0; background-color: #fefbf6; color: #111827;text-align: center;">
   <table role="presentation" style="width: 100%; border-collapse: collapse; border: 0; border-spacing: 0;">
     <tr>
       <td align="center" style="padding: 0">
@@ -35,7 +35,7 @@
             <!--Header-->
           <tr>
             <td align="center" style="border-bottom: solid 1px; border-color: #cccccc; padding: 20px 0;">
-              <img src="img/jmz_logo.png" alt="" width="50" style="height: auto; display: block" />
+              <img src="https://github.com/jaredcsv/developer_blog_resources/blob/main/EmailTemplates/img/jmz_logo.png?raw=true" alt="" width="50" style="height: auto; display: block" />
               <p>@jaredcsv</p>
             </td>
           <tr>
@@ -49,7 +49,7 @@
                     <tr>
                       <td style="width: 260px; padding: 10px; vertical-align: top; border: solid 1px #cccccc;">
                         <p style="margin: 0 0 10px 0; font-size: 16px; line-height: 24px; font-family: 'Montserrat', sans-serif;">
-                          <img src="img/dev-blog-2-cover.png" alt="" width="100%" style="height: auto; display: block" />
+                          <img src="https://github.com/jaredcsv/developer_blog_resources/blob/main/EmailTemplates/img/dev-blog-2-cover.png?raw=true" alt="" width="100%" style="height: auto; display: block" />
                         </p>
                         <p style="margin: 0 0 5px 0; font-size: 16px; line-height: 24px; font-family: 'Montserrat', sans-serif;">
                           <a href="https://medium.com/@jaredcsv/developer-blog-2-base-de-datos-de-restaurante-diseño-del-modelo-conceptual-e-r-1472fea5ef96" style="font-weight: bold; color: #111827; text-decoration: underline;">Developer Blog #2: Base de Datos de Restaurante(Diseño del Modelo Conceptual E-R)</a>
@@ -72,7 +72,7 @@
                       <tr>
                         <td style="width: 260px; border: solid 1px; border-color: #cccccc; vertical-align: top; padding: 1rem;">
                           <p style="margin: 0 0 25px 0; font-size: 16px; line-height: 24px; font-family: 'Montserrat', sans-serif;">
-                            <img src="img/cover-blog-salesforce-que-es.png" alt="" width="100%" style="height: auto; display: block" />
+                            <img src="https://github.com/jaredcsv/developer_blog_resources/blob/main/EmailTemplates/img/cover-blog-salesforce-que-es.png?raw=true" alt="" width="100%" style="height: auto; display: block" />
                           </p>
                           <p style="margin: 0; font-size: 16px; line-height: 24px; font-family: 'Montserrat', sans-serif;">
                             <a href="https://medium.com/@jaredcsv/salesforce-que-es-c72b3a5e72ee" style="font-weight: bold; color: #111827; text-decoration: underline;">Salesforce: ¿Qué es y cómo empezar?</a>
@@ -84,7 +84,7 @@
                         <td style="width: 50px; padding: 0; font-size: 0; line-height: 0;">&nbsp;</td>
                         <td style="width: 260px; border: solid 1px; border-color: #cccccc; vertical-align: top; padding: 1rem;">
                           <p style="margin: 0 0 25px 0; font-size: 16px; line-height: 24px; font-family: 'Montserrat', sans-serif;">
-                            <img src="img/cover-vpn-article.png" alt="" width="100%" style="height: auto; display: block" />
+                            <img src="https://github.com/jaredcsv/developer_blog_resources/blob/main/EmailTemplates/img/cover-vpn-article.png?raw=true" alt="" width="100%" style="height: auto; display: block" />
                           </p>
                           <p style="margin: 0; font-size: 16px; line-height: 24px; font-family: Arial, sans-serif;">
                             <a href="https://medium.com/@jaredcsv/vpns-funcionamiento-privacidad-y-negocios-d099c3d541a3" style="font-weight: bold; color: #111827; text-decoration: underline;">VPNs: Funcionamiento, Privacidad y Negocio</a>
@@ -105,7 +105,7 @@
             <td style="padding: 30px; border-top: 1px solid #cccccc">
               <table role="presentation" style="width: 100%; border-collapse: collapse; border: 0; border-spacing: 0; font-size: 9px; font-family: 'Montserrat', sans-serif;">
                 <tr style="text-align: center">
-                  <td style="padding: 0; width: 50%" align="center">
+                  <td style="padding: 10px 0; width: 50%" align="center">
                     <p style="margin: 15px 0 0 0; font-size: 14px; line-height: 16px; font-family: 'Montserrat', sans-serif;">Jared Martinez 2024</p>
                   </td>
                 </tr>
@@ -113,27 +113,25 @@
                   <td style="width: 50%" align="center">
                     <table role="presentation" style="border-collapse: collapse; border: 0; border-spacing: 0;">
                       <tr>
-                        <td style="padding: 15px 0; width: 38px">
-                          <a href="https://medium.com/@jaredcsv"><img src="img/Medium-Symbol-Black-RGB@2x.png" alt="Medium" width="30" style="height: auto; display: block; border: 0" /></a>
+                        <td style="padding: 0 0 0 10px; width: 38px">
+                          <a href="https://medium.com/@jaredcsv"><img src="https://github.com/jaredcsv/developer_blog_resources/blob/main/EmailTemplates/img/Medium-Symbol-Black-RGB@2x.png?raw=true" alt="Medium" width="30" style="height: auto; display: block; border: 0" /></a>
                         </td>
                         <td style="padding: 0 0 0 10px; width: 38px">
-                          <a href="https://www.linkedin.com/in/jaredcsv/"><img src="img/linkedin.png" alt="LinkedIn" width="20" style="height: auto; display: block; border: 0" /></a>
+                          <a href="https://www.linkedin.com/in/jaredcsv/"><img src="https://github.com/jaredcsv/developer_blog_resources/blob/main/EmailTemplates/img/linkedin.png?raw=true" alt="LinkedIn" width="20" style="height: auto; display: block; border: 0" /></a>
                         </td>
                         <td style="padding: 0 0 0 10px; width: 38px">
-                          <a href="https://github.com/jaredcsv"><img src="img/github-logo.png" alt="Github" width="20" style="height: auto; display: block; border: 0" /></a>
+                          <a href="https://github.com/jaredcsv"><img src="https://github.com/jaredcsv/developer_blog_resources/blob/main/EmailTemplates/img/github-logo.png?raw=true" alt="Github" width="20" style="height: auto; display: block; border: 0" /></a>
                         </td>
                       </tr>
+                    </table>
+                    <table role="presentation" style="border-collapse: collapse; border: 0; border-spacing: 0;">
                       <tr>
-                        <table role="presentation" style="border-collapse: collapse; border: 0; border-spacing: 0;">
-                          <tr>
-                            <td align="center">
-                              <p style="margin: 0; font-size: 10px; line-height: 16px; font-family: 'Montserrat', sans-serif;">
-                                ¿Deseas cancelar tu suscripción? <br />
-                                <a href="http://www.example.com" style="text-decoration: underline">Unsubscribe</a>
-                              </p>
-                            </td>
-                          </tr>
-                        </table>
+                        <td align="center" style="padding: 10px 0">
+                          <p style="margin: 0; font-size: 10px; line-height: 16px; font-family: 'Montserrat', sans-serif;">
+                            ¿Deseas cancelar tu suscripción? <br />
+                            <a href="http://www.example.com" style="text-decoration: underline">Unsubscribe</a>
+                          </p>
+                        </td>
                       </tr>
                     </table>
                   </td>
