--- a/EmailTemplates/BlogNotificationTemplate.html
+++ b/EmailTemplates/BlogNotificationTemplate.html
@@ -27,14 +27,14 @@
     }
   </style>
 </head>
-<body style="margin: 0; padding: 0; background-color: #fefbf6; color: #111827;text-align: center;">
+<body style="margin: 0; padding: 0;background:#FFFFFF color: #111827;text-align: center;">
   <table role="presentation" style="width: 100%; border-collapse: collapse; border: 0; border-spacing: 0;">
     <tr>
-      <td align="center" style="padding: 0">
-        <table role="presentation" style="width: 602px; border-collapse: collapse; border-spacing: 0; text-align: left; border-radius: 20px;">
+      <td align="center" style="padding: 0;">
+        <table role="presentation" style="width: 602px; border-collapse: collapse;background-color:#fefbf6; border-spacing: 0; text-align: left; border-radius: 20px;">
             <!--Header-->
           <tr>
-            <td align="center" style="border-bottom: solid 1px; border-color: #cccccc; padding: 20px 0;">
+            <td align="center" style="border-bottom: solid 1px; border-color: #cccccc; padding: 50px 0 0 10px;">
               <img src="https://github.com/jaredcsv/developer_blog_resources/blob/main/EmailTemplates/img/jmz_logo.png?raw=true" alt="" width="50" style="height: auto; display: block" />
               <p>@jaredcsv</p>
             </td>
