--- a/EmailTemplates/BlogNotificationTemplate.html
+++ b/EmailTemplates/BlogNotificationTemplate.html
@@ -27,7 +27,7 @@
     }
   </style>
 </head>
-<body style="margin: 0; padding: 0;background:#FFFFFF color: #111827;text-align: center;">
+<body style="margin: 0; padding: 0;background:#FFFFFF;color: #111827;text-align: center;">
   <table role="presentation" style="width: 100%; border-collapse: collapse; border: 0; border-spacing: 0;">
     <tr>
       <td align="center" style="padding: 0;">
